--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .table-container {
     max-width: 50%; /* Ustaw maksymalną szerokość */
     margin-top: 20vh; /* Wyśrodkowanie */
-    overflow: auto;
+    margin: auto; 
 }
