--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,4 @@
 .table-container {
-    max-width: 50%; /* Ustaw maksymalną szerokość */
-    margin-top: 20vh; /* Wyśrodkowanie */
+    max-width: 70%;
     margin: auto; 
 }
