--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,3 +2,11 @@
     max-width: 70%;
     margin: auto; 
 }
+.filter-container{
+    display: flex;
+    gap: 1rem;
+}
+.top-bar-container{
+    display: flex;
+    justify-content: space-between;
+}
